// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser relational expressions parses equality expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 19,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser relational expressions parses greater-than expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 17,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser relational expressions parses greater-than-or-equal-to expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 18,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser relational expressions parses inequality expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 20,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser relational expressions parses less-than expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 15,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser relational expressions parses less-than-or-equal-to expressions 1`] = `
Binary {
  "left": Literal {
    "value": 5,
  },
  "right": Literal {
    "value": 2,
  },
  "token": Object {
    "kind": 16,
    "line": 1,
    "literal": undefined,
  },
}
`;
